--- a/_posts/2023-08-15-yuu.markdown
+++ b/_posts/2023-08-15-yuu.markdown
@@ -1,10 +1,9 @@
 ---
 # layout: post
-title:  "Welcome to Jekyll!"
+title:  "Restaurant Yuu"
 date:   2023-08-13 19:28:15 -0400
 categories:
   - New York
-  - Food
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
